--- a/.gitignore
+++ b/.gitignore
@@ -265,3 +265,6 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 
 # End of https://www.toptal.com/developers/gitignore/api/python,flask,git
+
+# Ignore dynaconf secret files
+.secrets.*
